feat: add draculaUI and fontawesome to repo

--- a/client/angular.json
+++ b/client/angular.json
@@ -30,7 +30,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/dracula-ui/styles/dracula-ui.css",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": []
           },
