feat: complete walking skeleton

--- a/client/angular.json
+++ b/client/angular.json
@@ -30,9 +30,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/dracula-ui/styles/dracula-ui.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "./node_modules/dracula-ui/styles/dracula-ui.css",
+              "./node_modules/font-awesome/css/font-awesome.min.css",
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -64,6 +64,11 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "ssl": true,
+            "sslCert": "./ssl/localhost.pem",
+            "sslKey": "./ssl/localhost-key.pem"
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
