feat: get users clinet side and add auth checks to api

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "grayllama54 mu)dyHorn97 blac<Horse80 pin<Shape54 gr3enBoo23 coolP!g50 braveLun(h77"
 }
